
Improvements:

    - The list of test keywords is now available as a variable in the
      vvtest_util.py and vvtest_util.sh script fragments, such as

          KEYWORDS = ['foo','bar']

    - The environment variable VVTEST_PLATFORM_SPECS can be used to specify
      platform settings, such as the batch system, the max number of cores
      available, the cores per node, the devices per node, etc. The syntax
      is comma separated name=value. For example,

          VVTEST_PLATFORM_SPECS="batchsys=slurm,cores_per_node=44"

      The platform settings precedence is command line first, then this
      environment variable, then user plugin values, then builtin values.

    - The following two groups of variables will now always be defined in the
      vvtest_util.py and vvtest_util.sh files:

          RESOURCE_np =
          RESOURCE_IDS_np =
          RESOURCE_TOTAL_np =

          RESOURCE_ndevice =
          RESOURCE_IDS_ndevice =
          RESOURCE_TOTAL_ndevice =

      If there are no devices (GPUs), then ndevice and total ndevice are zero.

    - A soft link to vvtest and a config directory can now be used (without
      using the vvtest_bootstrap.py mechanism).

    - Including files into test headers (a.k.a, inserting directive files)
      can now have testname, platform, and option attributes. For example,

          #VVT: include (testname=foo) : afile.txt
          #VVT: include (platform="Linux or XBox") : bfile.txt
          #VVT: include (option="dbg and not gprof") : cfile.txt

    - The "insert directive file" now has an alias, "include". For example,
      this will insert the file "myfile.txt" during directive processing:

          #VVT: include : myfile.txt

    - The keywords specification in a test header can now use the "parameters"
      attribute, such as

          #VVT: keywords (parameters="np=1") : fast
          #VVT: keywords (parameters="np=8") : long
